--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </nav>
       </div>
       <header>
+
+         <h1 class="pawTitle">Paw Print Kennels</h1>
+
         <svg class="logo" viewBox="0 0 140 120" width="140px" height="120px" fill="#BA8058">
                   <g>
             <ellipse class="ellipse" cx="70.4" cy="69.9" rx="50.4" ry="50.1" fill=""/>
